Completed Project, needs final tune-up

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <!-- <li class="preview">
                     <a class="preview__link" href="#23456">
                       <figure class="preview__fig">
-                        <img src="src/img/test-1.jpg" alt="Test" />
+                        <img src="src/img/test23-1.jpg" alt="Test23" />
                       </figure>
                       <div class="preview__data">
                         <h4 class="preview__name">
@@ -90,7 +90,7 @@
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
               <figure class="preview__fig">
-                <img src="src/img/test-1.jpg" alt="Test" />
+                <img src="src/img/test23-1.jpg" alt="Test23" />
               </figure>
               <div class="preview__data">
                 <h4 class="preview__title">Pasta with Tomato Cream ...</h4>
@@ -160,7 +160,7 @@
 
         <!--
         <figure class="recipe__fig">
-          <img src="src/img/test-1.jpg" alt="Tomato" class="recipe__img" />
+          <img src="src/img/test23-1.jpg" alt="Tomato" class="recipe__img" />
           <h1 class="recipe__title">
             <span>Pasta with tomato cream sauce</span>
           </h1>
@@ -237,7 +237,7 @@
         <div class="recipe__directions">
           <h2 class="heading--2">How to cook it</h2>
           <p class="recipe__directions-text">
-            This recipe was carefully designed and tested by
+            This recipe was carefully designed and test23ed by
             <span class="recipe__publisher">The Pioneer Woman</span>. Please check out
             directions at their website.
           </p>
@@ -263,13 +263,13 @@
         <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
-          <input value="TEST" required name="title" type="text" />
+          <input value="TEST23" required name="title" type="text" />
           <label>URL</label>
-          <input value="TEST" required name="sourceUrl" type="text" />
+          <input value="TEST23" required name="sourceUrl" type="text" />
           <label>Image URL</label>
-          <input value="TEST" required name="image" type="text" />
+          <input value="TEST23" required name="image" type="text" />
           <label>Publisher</label>
-          <input value="TEST" required name="publisher" type="text" />
+          <input value="TEST23" required name="publisher" type="text" />
           <label>Prep time</label>
           <input value="23" required name="cookingTime" type="number" />
           <label>Servings</label>
